--- a/SoFlu全自动测试平台教程/2. 操作指南/6. 性能测试/6. 对比性能测试报告.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/6. 性能测试/6. 对比性能测试报告.md
@@ -14,24 +14,24 @@
 
 a）进入全自动测试平台，单击性能测试 > 接口测试管理，进入性能测试列表页面。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/6.%20%E6%80%A7%E8%83%BD%E6%B5%8B%E8%AF%95/6-1.png)
+![image](https://user-images.githubusercontent.com/79617492/190992043-c2ee69b1-5b96-4d84-bfd4-c2ddec9debc4.png)
 
 ##### 图6-1 进入性能测试列表页面
 
 b）选择对应性能测试，单击更多 > 测试报告，进入测试报告列表页面。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/6.%20%E6%80%A7%E8%83%BD%E6%B5%8B%E8%AF%95/6-2.png)
+![image](https://user-images.githubusercontent.com/79617492/190992056-66f002b1-4ded-4460-a79e-682377282850.png)
 
 ##### 图6-2 进入测试报告列表页面
 
 c）勾选两份需进行对比的测试报告，单击报告比对。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/6.%20%E6%80%A7%E8%83%BD%E6%B5%8B%E8%AF%95/6-3.png)
+![image](https://user-images.githubusercontent.com/79617492/190992071-4dd5e2e0-9b61-4856-999e-87fd15c6d983.png)
 
 ##### 图6-3 单击报告比对
 
 d）在报告比对页面，您可以看到两份性能测试报告之间的数据对比。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/6.%20%E6%80%A7%E8%83%BD%E6%B5%8B%E8%AF%95/6-4.png)
+![image](https://user-images.githubusercontent.com/79617492/190992078-06c45549-edb1-4ae5-8827-27e5b8f7cc1f.png)
 
 ##### 图6-4 性能测试报告数据对比
