--- a/SoFlu全自动测试平台教程/2. 操作指南/6. 性能测试/7. 查看测试报告监控数据.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/6. 性能测试/7. 查看测试报告监控数据.md
@@ -1,1 +1,19 @@
-test
+### 2. 操作指南
+
+#### 2.3 测试用例
+
+##### 2.3.6 性能测试
+
+##### 2.3.6.7 查看测试报告监控数据
+
+全自动测试平台支持调用` Promentheus `进行数据监控，用户可以在测试报告查看监控收集到的数据。
+
+##### 2.3.6.7.1 基本概述
+
+a）用户需要先安装` prometheus `监控工具；
+
+b）在被测试的服务器上安装` node_exporter `插件，用于将在被测试的服务器上收集的性能指标参数传给` prometheus `；
+
+c）在平台上执行完性能测试后，测试报告上会显示收集的CPU、内存、磁盘以及网卡输入输出等变化指标信息；
+
+d）用户可根据收集的数据进行系统分析和调优。
