--- a/SoFlu全自动测试平台教程/2. 操作指南/6. 性能测试/7. 查看测试报告监控数据.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/6. 性能测试/7. 查看测试报告监控数据.md
@@ -69,3 +69,23 @@ i）输入prometheus地址。
 ##### 图7-7 输入prometheus地址
 
 j）在系统设置页面，再次选择“服务 > 资源池管理”。
+
+k）选择一个资源池，单击“资源管理”选项，进入资源管理页面。
+
+l）在新增或修改资源时，输入监控指标地址（即服务器B的地址）。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/6.%20%E6%80%A7%E8%83%BD%E6%B5%8B%E8%AF%95/7-8.png)
+
+##### 图7-8 输入监控指标地址
+
+m）在全自动测试平台页面上方，选择“性能测试”功能模块，在新增或修改性能测试时，选择对应的资源池。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/6.%20%E6%80%A7%E8%83%BD%E6%B5%8B%E8%AF%95/7-9.png)
+
+##### 图7-9 选择对应的资源池
+
+n）执行性能测试并查看测试报告，在测试报告页面单击“监控详情”页签，便可查看服务器B的监控数据，您也可以通过切换地址查看多台服务器的监控数据。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/6.%20%E6%80%A7%E8%83%BD%E6%B5%8B%E8%AF%95/7-10.png)
+
+##### 图7-10 查看服务器B的监控数据
