--- a/SoFlu全自动测试平台教程/2. 操作指南/6. 性能测试/8. 下载JMX文件.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/6. 性能测试/8. 下载JMX文件.md
@@ -1,1 +1,13 @@
-test
+### 2. 操作指南
+
+#### 2.3 测试用例
+
+##### 2.3.6 性能测试
+
+##### 2.3.6.8 下载JMX文件
+
+本节为您介绍下载JMX文件的具体操作过程，目前仅支持接口性能测试下载JMX文件。
+
+##### 2.3.6.8.1 操作步骤
+
+a）进入接口性能测试列表，选择需执行的性能测试，单击“更多 > 下载JMX”即可下载。
