--- a/SoFlu全自动测试平台教程/2. 操作指南/6. 性能测试/8. 下载JMX文件.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/6. 性能测试/8. 下载JMX文件.md
@@ -12,7 +12,7 @@
 
 a）进入接口性能测试列表，选择需执行的性能测试，单击“更多 > 下载JMX”即可下载。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/6.%20%E6%80%A7%E8%83%BD%E6%B5%8B%E8%AF%95/8-1.png)
+![image](https://user-images.githubusercontent.com/79617492/191205849-057953b8-70a8-414f-8843-a974b5b7cbf2.png)
 
 ##### 图8-1 单击“更多 > 下载JMX”
 
