--- a/SoFlu全自动测试平台教程/2. 操作指南/6. 性能测试/9. 部署本地模式.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/6. 性能测试/9. 部署本地模式.md
@@ -1,1 +1,21 @@
-test
+### 2. 操作指南
+
+#### 2.3 测试用例
+
+##### 2.3.6 性能测试
+
+##### 2.3.6.9 部署本地模式
+
+全自动测试平台性能测试支持本地模式，即无需资源池中的资源，便可本地执行性能测试，并可在全自动测试平台中查看性能测试报告。
+
+##### 2.3.6.9.1 操作步骤
+
+a）进入全自动测试平台，单击右上角工具下载图标。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/6.%20%E6%80%A7%E8%83%BD%E6%B5%8B%E8%AF%95/9-1.png)
+
+##### 图9-1 单击右上角工具下载图标
+
+b）进入工具下载页面，单击下载JMeter部署包和本地性能测试包。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/6.%20%E6%80%A7%E8%83%BD%E6%B5%8B%E8%AF%95/9-2.png)
