--- a/SoFlu全自动测试平台教程/2. 操作指南/6. 性能测试/9. 部署本地模式.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/6. 性能测试/9. 部署本地模式.md
@@ -19,3 +19,33 @@ a）进入全自动测试平台，单击右上角工具下载图标。
 b）进入工具下载页面，单击下载JMeter部署包和本地性能测试包。
 
 ![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/6.%20%E6%80%A7%E8%83%BD%E6%B5%8B%E8%AF%95/9-2.png)
+
+##### 图9-2 单击下载JMeter部署包和本地性能测试包
+
+c）将“JMeter部署包”和“本地性能测试包”解压到本地（即Linux或者Unix操作系统下）。
+
+d）进入全自动测试平台“性能测试”模块，选择需本地执行的性能测试，单击更多 > 下载JMX来下载性能测试文件。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/6.%20%E6%80%A7%E8%83%BD%E6%B5%8B%E8%AF%95/9-3.png)
+
+##### 图9-3 下载性能测试文件
+
+e）将JMX文件解压到本地（即Linux或者Unix操作系统下）。
+
+f）在本地（即Linux或者Unix操作系统下）输入如下命令，执行性能测试：
+
+##### 注意：启动命令时，需要有访问平台的网络权限。
+
+```
+java -jar –javaagent: /usr/local/feisuanyz-local-performance/sjt_agent.jar
+本地性能测试包路径 全自动测试平台登录账号 全自动测试平台登录密码 JMX文件路径 JMeter部署包路径
+```
+
+示例如下：
+
+```
+java -jar -javaagent:/usr/local/feisuanyz-local-performance/sjt_agent.jar 
+/usr/local/feisuanyz-local-performance/feisuanyz-local-performance.jar 
+lijind@feisuan a123*** /usr/local/61828801b3b46200064efc2f.jmx 
+/usr/local/apache-jmeter-5.4.1
+```
