--- a/SoFlu全自动测试平台教程/2. 操作指南/6. 性能测试/9. 部署本地模式.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/6. 性能测试/9. 部署本地模式.md
@@ -49,3 +49,21 @@ java -jar -javaagent:/usr/local/feisuanyz-local-performance/sjt_agent.jar
 lijind@feisuan a123*** /usr/local/61828801b3b46200064efc2f.jmx 
 /usr/local/apache-jmeter-5.4.1
 ```
+
+g）若出现下图所示信息，则说明性能测试执行成功。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/6.%20%E6%80%A7%E8%83%BD%E6%B5%8B%E8%AF%95/9-4.png)
+
+##### 图9-4 性能测试执行成功
+
+h）进入全自动测试平台“性能测试”模块，选择已本地执行的性能测试，单击更多 > 测试报告。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/6.%20%E6%80%A7%E8%83%BD%E6%B5%8B%E8%AF%95/9-5.png)
+
+##### 图9-5 单击更多 > 测试报告
+
+i）进入测试报告页面，选择执行类型为“本地模式”的性能测试，单击详情查看性能测试报告。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/6.%20%E6%80%A7%E8%83%BD%E6%B5%8B%E8%AF%95/9-6.png)
+
+##### 图9-6 查看性能测试报告
