--- a/SoFlu全自动测试平台教程/2. 操作指南/6. 性能测试/9. 部署本地模式.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/6. 性能测试/9. 部署本地模式.md
@@ -12,13 +12,13 @@
 
 a）进入全自动测试平台，单击右上角工具下载图标。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/6.%20%E6%80%A7%E8%83%BD%E6%B5%8B%E8%AF%95/9-1.png)
+![image](https://user-images.githubusercontent.com/79617492/191207576-ba839648-63e3-422e-a6d0-bca40dd830d7.png)
 
 ##### 图9-1 单击右上角工具下载图标
 
 b）进入工具下载页面，单击下载JMeter部署包和本地性能测试包。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/6.%20%E6%80%A7%E8%83%BD%E6%B5%8B%E8%AF%95/9-2.png)
+![image](https://user-images.githubusercontent.com/79617492/191207605-5c05976e-151c-420a-9127-b4aac8a30c68.png)
 
 ##### 图9-2 单击下载JMeter部署包和本地性能测试包
 
@@ -26,7 +26,7 @@ c）将“JMeter部署包”和“本地性能测试包”解压到本地（即L
 
 d）进入全自动测试平台“性能测试”模块，选择需本地执行的性能测试，单击更多 > 下载JMX来下载性能测试文件。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/6.%20%E6%80%A7%E8%83%BD%E6%B5%8B%E8%AF%95/9-3.png)
+![image](https://user-images.githubusercontent.com/79617492/191207626-d6c47ccc-03bf-4aef-adea-d17879cf5441.png)
 
 ##### 图9-3 下载性能测试文件
 
@@ -52,18 +52,18 @@ lijind@feisuan a123*** /usr/local/61828801b3b46200064efc2f.jmx
 
 g）若出现下图所示信息，则说明性能测试执行成功。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/6.%20%E6%80%A7%E8%83%BD%E6%B5%8B%E8%AF%95/9-4.png)
+![image](https://user-images.githubusercontent.com/79617492/191207659-e81c9626-c999-4c6b-9b3f-57b66d717240.png)
 
 ##### 图9-4 性能测试执行成功
 
 h）进入全自动测试平台“性能测试”模块，选择已本地执行的性能测试，单击更多 > 测试报告。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/6.%20%E6%80%A7%E8%83%BD%E6%B5%8B%E8%AF%95/9-5.png)
+![image](https://user-images.githubusercontent.com/79617492/191207694-e9c59519-0e7d-4dfb-8cf2-5fcacde307b4.png)
 
 ##### 图9-5 单击更多 > 测试报告
 
 i）进入测试报告页面，选择执行类型为“本地模式”的性能测试，单击详情查看性能测试报告。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/6.%20%E6%80%A7%E8%83%BD%E6%B5%8B%E8%AF%95/9-6.png)
+![image](https://user-images.githubusercontent.com/79617492/191207725-85da468c-d665-4f7c-b552-608609f7d6b8.png)
 
 ##### 图9-6 查看性能测试报告
