--- a/SoFlu全自动测试平台教程/2. 操作指南/7. 测试计划/1. 新增测试计划.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/7. 测试计划/1. 新增测试计划.md
@@ -13,3 +13,13 @@
 a）进入全自动测试平台，在页面上方选择“测试计划”，然后单击＋ > 新增测试计划。
 
 ![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/7.%20%E6%B5%8B%E8%AF%95%E8%AE%A1%E5%88%92/image.png)
+
+##### 图1-1 单击＋ > 新增测试计划
+
+b）在新增测试计划页面填写相关信息，然后单击保存即可。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/7.%20%E6%B5%8B%E8%AF%95%E8%AE%A1%E5%88%92/7-2.png)
+
+##### 图1-2 单击保存
+
+##### 说明：选择相应的环境配置后，该测试计划下所有关联的测试用例或性能测试计划都会在该配置环境下执行。
