--- a/SoFlu全自动测试平台教程/2. 操作指南/7. 测试计划/2. 修改测试计划.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/7. 测试计划/2. 修改测试计划.md
@@ -13,3 +13,11 @@
 a）进入全自动测试平台测试计划页面，选择需要修改的测试计划，然后单击三个点图标 > 编辑。
 
 ![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/7.%20%E6%B5%8B%E8%AF%95%E8%AE%A1%E5%88%92/2-1.png)
+
+##### 图2-1 单击三个点图标 > 编辑
+
+b）系统弹出测试计划编辑页面，对测试计划相关信息进行修改后，单击保存即可。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/7.%20%E6%B5%8B%E8%AF%95%E8%AE%A1%E5%88%92/2-2.png)
+
+##### 图2-2 对测试计划相关信息进行修改
