--- a/SoFlu全自动测试平台教程/2. 操作指南/7. 测试计划/3. 删除测试计划.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/7. 测试计划/3. 删除测试计划.md
@@ -12,13 +12,13 @@
 
 a）进入全自动测试平台“测试计划”页面，选择需要删除的测试计划，然后单击三个点图标 > 删除。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/7.%20%E6%B5%8B%E8%AF%95%E8%AE%A1%E5%88%92/3-1.png)
+![image](https://user-images.githubusercontent.com/79617492/191218196-6ca101d1-08cf-42d2-a7f9-eac88d982fe3.png)
 
 ##### 图3-1 单击三个点图标 > 删除
 
 b）系统提示“是否确定删除测试计划”，确认后单击确定即可。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/7.%20%E6%B5%8B%E8%AF%95%E8%AE%A1%E5%88%92/3-2.png)
+![image](https://user-images.githubusercontent.com/79617492/191218212-965fafd6-4771-4e1b-92cb-eb0f0169df65.png)
 
 ##### 图3-2 单击确定
 
