--- a/SoFlu全自动测试平台教程/2. 操作指南/7. 测试计划/4. 新增精准回归测试计划.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/7. 测试计划/4. 新增精准回归测试计划.md
@@ -1,1 +1,19 @@
-test
+### 2. 操作指南
+
+#### 2.3 测试用例
+
+##### 2.3.7 测试计划
+
+##### 2.3.7.4 新增精准回归测试计划
+
+本节介绍如何新增精准回归测试计划，通过新增精准回归测试计划，选择所关联的全自动开发平台的项目，系统会自动关联该项目下所有接口绑定的测试用例，无需手动添加测试用例。
+
+##### 2.3.7.4.1 前提条件
+
+a）需先在接口管理中关联所需项目，关于如何关联项目可参考文档《SoFlu全自动测试平台教程操作指南第2.4.2.12节：关联全自动开发平台项目》。
+
+b）需将已关联项目下的接口绑定测试场景，并执行该测试场景，关于如何给测试场景绑定接口以及执行测试场景，可参考文档《SoFlu全自动测试平台教程操作指南第2.4.1.1节：新增测试场景》。
+
+##### 2.3.7.4.2 操作步骤
+
+a）进入全自动测试平台，在页面上方选择“测试计划”，然后单击＋ > 新增精准回归测试计划。
