--- a/SoFlu全自动测试平台教程/2. 操作指南/7. 测试计划/5. 关联测试用例.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/7. 测试计划/5. 关联测试用例.md
@@ -1,1 +1,17 @@
-test
+### 2. 操作指南
+
+#### 2.3 测试用例
+
+##### 2.3.7 测试计划
+
+##### 2.3.7.5 关联测试用例
+
+本节主要介绍如何对测试计划进行关联测试用例。
+
+##### 2.3.7.5.1 操作步骤
+
+a）进入全自动测试平台，在页面上方选择“测试计划”，然后选择需要关联测试用例的测试计划，单击关联用例。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/7.%20%E6%B5%8B%E8%AF%95%E8%AE%A1%E5%88%92/5-1.png)
+
+##### 图5-1 单击关联用例
