--- a/SoFlu全自动测试平台教程/2. 操作指南/7. 测试计划/5. 关联测试用例.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/7. 测试计划/5. 关联测试用例.md
@@ -12,13 +12,13 @@
 
 a）进入全自动测试平台，在页面上方选择“测试计划”，然后选择需要关联测试用例的测试计划，单击关联用例。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/7.%20%E6%B5%8B%E8%AF%95%E8%AE%A1%E5%88%92/5-1.png)
+![image](https://user-images.githubusercontent.com/79617492/191448104-77f44124-1e8a-4adf-9062-5aa3194e835d.png)
 
 ##### 图5-1 单击关联用例
 
 b）在关联测试用例页面勾选需要关联的测试用例，然后单击确定即可。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/7.%20%E6%B5%8B%E8%AF%95%E8%AE%A1%E5%88%92/5-2.png)
+![image](https://user-images.githubusercontent.com/79617492/191448121-fa3e69e2-47aa-4e30-a210-9fff890c8a47.png)
 
 ##### 图5-2 单击确定
 
