--- a/SoFlu全自动测试平台教程/2. 操作指南/7. 测试计划/6. 关联性能测试.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/7. 测试计划/6. 关联性能测试.md
@@ -13,3 +13,13 @@
 a）进入全自动测试平台，在页面上方选择“测试计划”，然后选择需要关联性能测试的测试计划，单击已关联性能测试 > 关联性能测试。
 
 ![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/7.%20%E6%B5%8B%E8%AF%95%E8%AE%A1%E5%88%92/6-1.png)
+
+##### 图6-1 单击已关联性能测试 > 关联性能测试
+
+b）在关联性能测试页面勾选需要关联的性能测试，然后单击确定即可。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/7.%20%E6%B5%8B%E8%AF%95%E8%AE%A1%E5%88%92/6-2.png)
+
+##### 图6-2 单击确定
+
+##### 说明：只有运行完成的性能测试才会显示在关联性能测试页面里。
