--- a/SoFlu全自动测试平台教程/2. 操作指南/7. 测试计划/6. 关联性能测试.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/7. 测试计划/6. 关联性能测试.md
@@ -12,13 +12,13 @@
 
 a）进入全自动测试平台，在页面上方选择“测试计划”，然后选择需要关联性能测试的测试计划，单击已关联性能测试 > 关联性能测试。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/7.%20%E6%B5%8B%E8%AF%95%E8%AE%A1%E5%88%92/6-1.png)
+![image](https://user-images.githubusercontent.com/79617492/191470643-c14b3d6d-438e-4621-a9d2-ffb87b869ebf.png)
 
 ##### 图6-1 单击已关联性能测试 > 关联性能测试
 
 b）在关联性能测试页面勾选需要关联的性能测试，然后单击确定即可。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/7.%20%E6%B5%8B%E8%AF%95%E8%AE%A1%E5%88%92/6-2.png)
+![image](https://user-images.githubusercontent.com/79617492/191470658-8828d0a8-61e2-4726-a99f-a26d0693341e.png)
 
 ##### 图6-2 单击确定
 
