--- a/SoFlu全自动测试平台教程/2. 操作指南/7. 测试计划/8. 取消测试计划.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/7. 测试计划/8. 取消测试计划.md
@@ -1,1 +1,15 @@
-test
+### 2. 操作指南
+
+#### 2.3 测试用例
+
+##### 2.3.7 测试计划
+
+##### 2.3.7.8 取消测试计划
+
+本节介绍如何取消测试计划。
+
+##### 2.3.7.8.1 操作步骤
+
+a）进入全自动测试平台，在页面上方选择“测试计划”，然后选择正在执行中的测试计划，单击取消执行。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/7.%20%E6%B5%8B%E8%AF%95%E8%AE%A1%E5%88%92/8-1.png)
