--- a/SoFlu全自动测试平台教程/2. 操作指南/7. 测试计划/8. 取消测试计划.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/7. 测试计划/8. 取消测试计划.md
@@ -12,4 +12,12 @@
 
 a）进入全自动测试平台，在页面上方选择“测试计划”，然后选择正在执行中的测试计划，单击取消执行。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/7.%20%E6%B5%8B%E8%AF%95%E8%AE%A1%E5%88%92/8-1.png)
+![image](https://user-images.githubusercontent.com/79617492/191471011-01c4495b-dfa3-4b5f-9ed6-063d0aaba824.png)
+
+##### 图8-1 单击取消执行
+
+b）系统提示“是否确定取消执行测试计划”，确认后单击确定即可。
+
+![image](https://user-images.githubusercontent.com/79617492/191471024-4691cc2d-b20a-4c4d-86c2-234c6c5d1db1.png)
+
+##### 图8-2 单击确定
