--- a/SoFlu全自动测试平台教程/3. 案例演示/1. 基于token登录验证功能测试场景配置.md
+++ b/SoFlu全自动测试平台教程/3. 案例演示/1. 基于token登录验证功能测试场景配置.md
@@ -1,1 +1,13 @@
-test
+### 3. 案例演示
+
+#### 3.1 基于token登录验证功能测试场景配置
+
+当用户直接通过URL访问特定页面时，一般会遇到这样的情况，若未登录当前网站，则会被重新导航至登录页面，若已登录过当前网站，才可以通过URL直接访问特定页面。
+
+内部实现逻辑可参考如下：
+
+a）客户端输入用户名和密码向服务器端发起验证；
+
+b）服务器端验证通过之后根据某种规则生成用户的token并返回，token保存在redis中，以保证不同服务器间的共享；
+
+c）客户端存储该token，可以存储在sessionStorage或者cookie中；
