--- a/SoFlu全自动测试平台教程/3. 案例演示/1. 基于token登录验证功能测试场景配置.md
+++ b/SoFlu全自动测试平台教程/3. 案例演示/1. 基于token登录验证功能测试场景配置.md
@@ -11,3 +11,19 @@ a）客户端输入用户名和密码向服务器端发起验证；
 b）服务器端验证通过之后根据某种规则生成用户的token并返回，token保存在redis中，以保证不同服务器间的共享；
 
 c）客户端存储该token，可以存储在sessionStorage或者cookie中；
+
+d）后续服务器的每次请求都在请求头携带token发送到服务端；
+
+e）服务端在执行方法前先对请求进行验证，取出token查询redis中有没有对应的值。
+
+本节将使用全自动测试平台测试登录验证功能中的两个接口，通过配置合适的测试场景，来检测登录验证功能是否可以正常实现。
+
+##### 3.1.1 测试场景配置说明
+
+##### a）关联接口：
+
+a1）接口A：登录验证接口，用于提取用户的token信息，存储到cookie管理器中。
+
+a2）接口B：查询接口，即登录验证成功之后的特定页面，若接口A提取到了正确的token信息，则接口B可以请求成功。
+
+##### b）测试目的：
