--- a/SoFlu全自动测试平台教程/3. 案例演示/1. 基于token登录验证功能测试场景配置.md
+++ b/SoFlu全自动测试平台教程/3. 案例演示/1. 基于token登录验证功能测试场景配置.md
@@ -27,3 +27,21 @@ a1）接口A：登录验证接口，用于提取用户的token信息，存储到
 a2）接口B：查询接口，即登录验证成功之后的特定页面，若接口A提取到了正确的token信息，则接口B可以请求成功。
 
 ##### b）测试目的：
+
+b1）测试是否通过请求接口A获取到了token值。
+
+b2）测试接口B是否可以请求成功，以检测token值是否正确。
+
+##### c）场景配置大致流程：
+
+c1）创建变量集：用于创建请求头参数userID。
+
+c2）创建场景组：用于将后续所有场景配置归属到同一场景组。
+
+c3）创建cookie管理器：用于存储提取的token信息。
+
+c4）创建信息头管理器：用于为当前场景组所有请求接口添加固定的头部参数userID
+
+c5）为当前场景组关联接口A
+
+c6）创建正则提取器：通过设置正确的正则表达式来提取接口A响应头中的token值。
