--- a/SoFlu全自动测试平台教程/3. 案例演示/1. 基于token登录验证功能测试场景配置.md
+++ b/SoFlu全自动测试平台教程/3. 案例演示/1. 基于token登录验证功能测试场景配置.md
@@ -40,8 +40,24 @@ c2）创建场景组：用于将后续所有场景配置归属到同一场景组
 
 c3）创建cookie管理器：用于存储提取的token信息。
 
-c4）创建信息头管理器：用于为当前场景组所有请求接口添加固定的头部参数userID
+c4）创建信息头管理器：用于为当前场景组所有请求接口添加固定的头部参数userID。
 
-c5）为当前场景组关联接口A
+c5）为当前场景组关联接口A。
 
 c6）创建正则提取器：通过设置正确的正则表达式来提取接口A响应头中的token值。
+
+c7）为当前场景组关联接口B。
+
+c8）设置响应断言：通过判断接口B响应体信息中是否包含id、name字段信息，来判断接口B是否请求成功。
+
+c9）保存场景配置，执行测试场景，查看执行报告。
+
+##### 3.1.2 前置条件
+
+a）所在测试项目已做好环境配置，否则无法添加测试接口并执行测试场景，具体操作可参见《SoFlu全自动测试平台教程操作指南第2.1.9节：新增环境配置》；
+
+b）测试用例模块中已创建对应接口测试用例，否则无法选择测试用例进行场景配置，具体操作可参见《SoFlu全自动测试平台教程操作指南第2.3.1.1节：新增测试用例》；
+
+c）接口管理模块中已添加需测试的接口，否则进行场景配置时无法关联对应的接口，具体操作可参见《SoFlu全自动测试平台教程操作指南第2.4.2.4节：新增接口》。
+
+##### 3.1.3 场景配置具体操作
