--- a/SoFlu全自动测试平台教程/3. 案例演示/1. 基于token登录验证功能测试场景配置.md
+++ b/SoFlu全自动测试平台教程/3. 案例演示/1. 基于token登录验证功能测试场景配置.md
@@ -77,3 +77,21 @@ a2）填写变量集名称，单击“新增变量”创建请求头参数userID
 ##### 说明：变量集、SQL管理以及Excel管理一般用于创建场景配置需引用的数据信息。
 
 b）创建场景组
+
+目的：用于将后续所有场景配置归属到同一场景组。
+
+b1）单击“接口测试 > 测试场景管理”。
+
+b2）选择已创建的接口测试用例，在根场景组下创建场景组。
+
+![输入图片说明](../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/3.%20%E6%A1%88%E4%BE%8B%E6%BC%94%E7%A4%BA/1-2.png)
+
+##### 图1-2 创建场景组
+
+##### 说明：根场景组下可创建多个场景组，不同场景组间线程分离，可同时运行多个场景组。
+
+c）创建cookie管理器
+
+目的：用于存储提取的token信息。
+
+c1）选中场景组，单击“+ > 配置器”。
