--- a/SoFlu全自动测试平台教程/3. 案例演示/1. 基于token登录验证功能测试场景配置.md
+++ b/SoFlu全自动测试平台教程/3. 案例演示/1. 基于token登录验证功能测试场景配置.md
@@ -95,3 +95,19 @@ c）创建cookie管理器
 目的：用于存储提取的token信息。
 
 c1）选中场景组，单击“+ > 配置器”。
+
+![输入图片说明](../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/3.%20%E6%A1%88%E4%BE%8B%E6%BC%94%E7%A4%BA/1-3.png)
+
+##### 图1-3 单击“+ > 配置器”
+
+c2）选择“cookie管理器”，填写cookie管理器注释信息即可。
+
+![输入图片说明](../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/3.%20%E6%A1%88%E4%BE%8B%E6%BC%94%E7%A4%BA/1-4.png)
+
+##### 图1-4 填写cookie管理器注释信息
+
+##### 说明：此处仅需创建cookie管理器便可以存储通过接口A获取的token信息，并用于同一场景组下的接口B，无需再新增cookie。
+
+d）创建信息头管理器
+
+目的：用于为当前场景组所有请求接口添加固定的头部参数userID
