--- a/SoFlu全自动测试平台教程/3. 案例演示/1. 基于token登录验证功能测试场景配置.md
+++ b/SoFlu全自动测试平台教程/3. 案例演示/1. 基于token登录验证功能测试场景配置.md
@@ -111,3 +111,23 @@ c2）选择“cookie管理器”，填写cookie管理器注释信息即可。
 d）创建信息头管理器
 
 目的：用于为当前场景组所有请求接口添加固定的头部参数userID
+
+d1）选中场景组，单击“+ > 配置器”。
+
+d2）选择“信息头管理器”，填写信息头管理器的注释信息。
+
+d3）单击“新增header”添加信息头，选择步骤a）创建的变量集即可。
+
+![输入图片说明](../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/3.%20%E6%A1%88%E4%BE%8B%E6%BC%94%E7%A4%BA/1-5.png)
+
+##### 图1-5 单击“新增header”添加信息头
+
+e）为当前场景组关联接口A
+
+e1）选中场景组，单击“+ > 接口”。
+
+![输入图片说明](../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/3.%20%E6%A1%88%E4%BE%8B%E6%BC%94%E7%A4%BA/1-6.png)
+
+##### 图1-6 单击“+ > 接口”
+
+e2）勾选对应接口模块下的接口后，单击“确定”即可。
