--- a/SoFlu全自动测试平台教程/3. 案例演示/1. 基于token登录验证功能测试场景配置.md
+++ b/SoFlu全自动测试平台教程/3. 案例演示/1. 基于token登录验证功能测试场景配置.md
@@ -131,3 +131,23 @@ e1）选中场景组，单击“+ > 接口”。
 ##### 图1-6 单击“+ > 接口”
 
 e2）勾选对应接口模块下的接口后，单击“确定”即可。
+
+![输入图片说明](../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/3.%20%E6%A1%88%E4%BE%8B%E6%BC%94%E7%A4%BA/1-7.png)
+
+##### 图1-7 单击“确定”
+
+f）创建正则提取器
+
+目的：通过设置正确的正则表达式来提取接口A响应头中的token值。
+
+f1）选中接口A，单击“+ > 后置处理器”。
+
+![输入图片说明](../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/3.%20%E6%A1%88%E4%BE%8B%E6%BC%94%E7%A4%BA/1-8.png)
+
+##### 图1-8 单击“+ > 后置处理器”
+
+f2）选择“正则提取器”，填写正则提取器的基本信息和默认值。
+
+![输入图片说明](../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/3.%20%E6%A1%88%E4%BE%8B%E6%BC%94%E7%A4%BA/1-9.png)
+
+##### 图1-9 填写正则提取器的基本信息和默认值
