--- a/SoFlu全自动测试平台教程/3. 案例演示/1. 基于token登录验证功能测试场景配置.md
+++ b/SoFlu全自动测试平台教程/3. 案例演示/1. 基于token登录验证功能测试场景配置.md
@@ -151,3 +151,24 @@ f2）选择“正则提取器”，填写正则提取器的基本信息和默认
 ![输入图片说明](../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/3.%20%E6%A1%88%E4%BE%8B%E6%BC%94%E7%A4%BA/1-9.png)
 
 ##### 图1-9 填写正则提取器的基本信息和默认值
+
+```
+填写说明：
+
+匹配数量：设置为0，表示提取符合条件的随机一个；
+
+正则表达式：由于请求接口A返回的响应头信息中“Set-Cookie: connect.sid=”后的参数值表示token值，故此处正则表达式设置为Set-Cookie: connect.sid=(.+?)，表示提取括号部分第一个匹配项；
+
+模板：设置为 $1$，表示解析到的第一个值；
+
+要检查的响应字段：选择“信息头”，表示对请求接口的响应信息头进行信息提取；
+
+默认值：表示若通过设置的正则表达式未提取到结果，则赋值默认值。
+
+```
+
+g）为当前场景组关联接口B（与步骤 a）类似）
+
+h）设置响应断言
+
+目的：通过判断接口B响应体信息中是否包含id、name字段信息，来判断接口B是否请求成功。
