--- a/SoFlu全自动测试平台教程/3. 案例演示/1. 基于token登录验证功能测试场景配置.md
+++ b/SoFlu全自动测试平台教程/3. 案例演示/1. 基于token登录验证功能测试场景配置.md
@@ -172,3 +172,23 @@ g）为当前场景组关联接口B（与步骤 a）类似）
 h）设置响应断言
 
 目的：通过判断接口B响应体信息中是否包含id、name字段信息，来判断接口B是否请求成功。
+
+h1）选中接口B，单击“+ > 断言”。
+
+![输入图片说明](../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/3.%20%E6%A1%88%E4%BE%8B%E6%BC%94%E7%A4%BA/1-10.png)
+
+##### 图1-10 单击“+ > 断言”
+
+h2）选择“响应断言”，填写注释信息，选择测试字段“响应体”和匹配规则“包括”。
+
+h3）新增两个常量值id、name，表示判断接口B响应体内容是否包括id、name字段信息。
+
+![输入图片说明](../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/3.%20%E6%A1%88%E4%BE%8B%E6%BC%94%E7%A4%BA/1-11.png)
+
+##### 图1-11 新增两个常量值
+
+i）保存场景配置，执行测试场景
+
+i1）进行每一步场景配置后，都需单击“保存”保存当前场景配置，以防数据丢失。
+
+i2）测试场景配置完成后，单击“执行”执行当前测试场景。
