--- a/SoFlu全自动测试平台教程/3. 案例演示/1. 基于token登录验证功能测试场景配置.md
+++ b/SoFlu全自动测试平台教程/3. 案例演示/1. 基于token登录验证功能测试场景配置.md
@@ -192,3 +192,21 @@ i）保存场景配置，执行测试场景
 i1）进行每一步场景配置后，都需单击“保存”保存当前场景配置，以防数据丢失。
 
 i2）测试场景配置完成后，单击“执行”执行当前测试场景。
+
+j）查看执行报告
+
+j1）通过测试场景整体执行报告，可以得知当前测试场景执行成功。
+
+![输入图片说明](../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/3.%20%E6%A1%88%E4%BE%8B%E6%BC%94%E7%A4%BA/1-12.png)
+
+##### 图1-12 当前测试场景执行成功
+
+j2）查看接口A执行详情，通过响应头及提取内容可以看到正常从接口A响应头中提取到了token信息。
+
+![输入图片说明](../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/3.%20%E6%A1%88%E4%BE%8B%E6%BC%94%E7%A4%BA/1-13.png)
+
+##### 图1-13 响应头
+
+![输入图片说明](../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/3.%20%E6%A1%88%E4%BE%8B%E6%BC%94%E7%A4%BA/1-14.png)
+
+##### 图1-14 提取内容
