--- a/SoFlu全自动测试平台教程/3. 案例演示/1. 基于token登录验证功能测试场景配置.md
+++ b/SoFlu全自动测试平台教程/3. 案例演示/1. 基于token登录验证功能测试场景配置.md
@@ -70,7 +70,7 @@ a1）单击“接口测试 > 变量集 > 新增变量集”。
 
 a2）填写变量集名称，单击“新增变量”创建请求头参数userID。
 
-![输入图片说明](../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/3.%20%E6%A1%88%E4%BE%8B%E6%BC%94%E7%A4%BA/image.png)
+![image](https://user-images.githubusercontent.com/79617492/191472304-84db5b38-9e12-4097-99d0-bc61a01670d1.png)
 
 ##### 图1-1 填写变量集信息
 
@@ -84,7 +84,7 @@ b1）单击“接口测试 > 测试场景管理”。
 
 b2）选择已创建的接口测试用例，在根场景组下创建场景组。
 
-![输入图片说明](../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/3.%20%E6%A1%88%E4%BE%8B%E6%BC%94%E7%A4%BA/1-2.png)
+![image](https://user-images.githubusercontent.com/79617492/191472337-26b109a8-74ad-4ae5-8aab-c8ca74971904.png)
 
 ##### 图1-2 创建场景组
 
@@ -96,13 +96,13 @@ c）创建cookie管理器
 
 c1）选中场景组，单击“+ > 配置器”。
 
-![输入图片说明](../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/3.%20%E6%A1%88%E4%BE%8B%E6%BC%94%E7%A4%BA/1-3.png)
+![image](https://user-images.githubusercontent.com/79617492/191472377-d7c21b71-7b70-4f54-96aa-6fef87fa4c6f.png)
 
 ##### 图1-3 单击“+ > 配置器”
 
 c2）选择“cookie管理器”，填写cookie管理器注释信息即可。
 
-![输入图片说明](../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/3.%20%E6%A1%88%E4%BE%8B%E6%BC%94%E7%A4%BA/1-4.png)
+![image](https://user-images.githubusercontent.com/79617492/191472409-73d3e554-34bf-418c-9245-19cd375079f1.png)
 
 ##### 图1-4 填写cookie管理器注释信息
 
@@ -118,7 +118,7 @@ d2）选择“信息头管理器”，填写信息头管理器的注释信息。
 
 d3）单击“新增header”添加信息头，选择步骤a）创建的变量集即可。
 
-![输入图片说明](../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/3.%20%E6%A1%88%E4%BE%8B%E6%BC%94%E7%A4%BA/1-5.png)
+![image](https://user-images.githubusercontent.com/79617492/191472456-1e993c17-de04-4727-a1dd-2411ea186c1a.png)
 
 ##### 图1-5 单击“新增header”添加信息头
 
@@ -126,13 +126,13 @@ e）为当前场景组关联接口A
 
 e1）选中场景组，单击“+ > 接口”。
 
-![输入图片说明](../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/3.%20%E6%A1%88%E4%BE%8B%E6%BC%94%E7%A4%BA/1-6.png)
+![image](https://user-images.githubusercontent.com/79617492/191472487-20699f9c-7224-408c-90f1-3b3cc5328b72.png)
 
 ##### 图1-6 单击“+ > 接口”
 
 e2）勾选对应接口模块下的接口后，单击“确定”即可。
 
-![输入图片说明](../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/3.%20%E6%A1%88%E4%BE%8B%E6%BC%94%E7%A4%BA/1-7.png)
+![image](https://user-images.githubusercontent.com/79617492/191472526-1724d7db-db55-4986-aa6a-5fc70931cfdf.png)
 
 ##### 图1-7 单击“确定”
 
@@ -142,13 +142,13 @@ f）创建正则提取器
 
 f1）选中接口A，单击“+ > 后置处理器”。
 
-![输入图片说明](../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/3.%20%E6%A1%88%E4%BE%8B%E6%BC%94%E7%A4%BA/1-8.png)
+![image](https://user-images.githubusercontent.com/79617492/191472563-1dca8d55-50e4-4bd0-80dd-6955a5f32291.png)
 
 ##### 图1-8 单击“+ > 后置处理器”
 
 f2）选择“正则提取器”，填写正则提取器的基本信息和默认值。
 
-![输入图片说明](../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/3.%20%E6%A1%88%E4%BE%8B%E6%BC%94%E7%A4%BA/1-9.png)
+![image](https://user-images.githubusercontent.com/79617492/191472592-b21a19ff-51ae-4a9d-8b07-2ee5dcb659ae.png)
 
 ##### 图1-9 填写正则提取器的基本信息和默认值
 
@@ -175,7 +175,7 @@ h）设置响应断言
 
 h1）选中接口B，单击“+ > 断言”。
 
-![输入图片说明](../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/3.%20%E6%A1%88%E4%BE%8B%E6%BC%94%E7%A4%BA/1-10.png)
+![image](https://user-images.githubusercontent.com/79617492/191472615-be0fb4d8-d2fa-4876-ba91-c498da26d984.png)
 
 ##### 图1-10 单击“+ > 断言”
 
@@ -183,7 +183,7 @@ h2）选择“响应断言”，填写注释信息，选择测试字段“响应
 
 h3）新增两个常量值id、name，表示判断接口B响应体内容是否包括id、name字段信息。
 
-![输入图片说明](../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/3.%20%E6%A1%88%E4%BE%8B%E6%BC%94%E7%A4%BA/1-11.png)
+![image](https://user-images.githubusercontent.com/79617492/191472647-c04fa3c3-ecd2-4d86-9109-35248828f225.png)
 
 ##### 图1-11 新增两个常量值
 
@@ -197,31 +197,31 @@ j）查看执行报告
 
 j1）通过测试场景整体执行报告，可以得知当前测试场景执行成功。
 
-![输入图片说明](../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/3.%20%E6%A1%88%E4%BE%8B%E6%BC%94%E7%A4%BA/1-12.png)
+![image](https://user-images.githubusercontent.com/79617492/191472685-00fc1c86-fab7-42f6-90a8-3e8714f67d26.png)
 
 ##### 图1-12 当前测试场景执行成功
 
 j2）查看接口A执行详情，通过响应头及提取内容可以看到正常从接口A响应头中提取到了token信息。
 
-![输入图片说明](../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/3.%20%E6%A1%88%E4%BE%8B%E6%BC%94%E7%A4%BA/1-13.png)
+![image](https://user-images.githubusercontent.com/79617492/191472710-f03696e3-508b-4cee-9457-31340d9798b5.png)
 
 ##### 图1-13 响应头
 
-![输入图片说明](../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/3.%20%E6%A1%88%E4%BE%8B%E6%BC%94%E7%A4%BA/1-14.png)
+![image](https://user-images.githubusercontent.com/79617492/191472743-3e459e8d-5920-4329-8401-66689780e9c1.png)
 
 ##### 图1-14 提取内容
 
 j3）查看接口B执行详情，通过响应体和断言信息可以得知请求接口B成功，同时可查看到接口B的请求内容带上了接口A提取的Token值，说明基于token登录验证功能可以正常实现。
 
-![输入图片说明](../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/3.%20%E6%A1%88%E4%BE%8B%E6%BC%94%E7%A4%BA/1-15.png)
+![image](https://user-images.githubusercontent.com/79617492/191472773-38e3ab09-b57f-44ca-81db-2975ecfd63aa.png)
 
 ##### 图1-15 响应体
 
-![输入图片说明](../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/3.%20%E6%A1%88%E4%BE%8B%E6%BC%94%E7%A4%BA/1-16.png)
+![image](https://user-images.githubusercontent.com/79617492/191472800-84546564-c6c8-4370-b123-147a54bd378e.png)
 
 ##### 图1-16 断言信息
 
-![输入图片说明](../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/3.%20%E6%A1%88%E4%BE%8B%E6%BC%94%E7%A4%BA/1-17.png)
+![image](https://user-images.githubusercontent.com/79617492/191472821-f89f429f-3c58-481f-becb-16f050200292.png)
 
 ##### 图1-17 请求内容
 
