--- a/SoFlu全自动测试平台教程/4. 测试场景组件介绍/1. 前置处理器/1. 请求时间限定.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景组件介绍/1. 前置处理器/1. 请求时间限定.md
@@ -1,1 +1,17 @@
-test
+### 4. 测试场景组件介绍
+
+#### 4.1 前置处理器
+
+##### 4.1.1 请求时间限定
+
+请求时间限定用于设置接口的超时时间，当时间请求时间超过设置的时间后，接口将会超时。本节将详细介绍请求时间详情章节。
+
+##### 4.1.1.1 操作步骤
+
+a）进入全自动测试平台的测试场景页面，选择已有测试场景的测试用例，选中接口后，单击 + > 前置处理器。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/1.%20%E5%89%8D%E7%BD%AE%E5%A4%84%E7%90%86%E5%99%A8/image.png)
+
+##### 图1-1 单击 + > 前置处理器
+
+b）选择“请求时间限定”，然后填写请求超时时间，单击执行。
