--- a/SoFlu全自动测试平台教程/4. 测试场景组件介绍/4. 测试场景组件介绍/2. 后置处理器/1. JSON提取器.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景组件介绍/4. 测试场景组件介绍/2. 后置处理器/1. JSON提取器.md
@@ -31,3 +31,17 @@ b3）匹配数量：默认获取符合条件的第一个，匹配规则与正则
 b4）是否拼接结果：若是，如果发现许多结果，插件将使用“，”分隔符将它们连接起来，并将其存储在名为_ALL的var中；
 
 b5）JSON解析表达式：具体用来匹配结果的JSON表达式；
+
+b6）默认值：当匹配不到结果时，会取默认值的数据。
+
+c）等待执行完毕，查看执行报告的响应体中code值。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/2.%20%E5%90%8E%E7%BD%AE%E5%A4%84%E7%90%86%E5%99%A8/1-3.png)
+
+##### 图1-3 查看执行报告的响应体中code值
+
+d）单击提取，可查看到设置的变量number成功提取到code值。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/2.%20%E5%90%8E%E7%BD%AE%E5%A4%84%E7%90%86%E5%99%A8/1-4.png)
+
+##### 图1-4 变量number成功提取到code值
