--- a/SoFlu全自动测试平台教程/4. 测试场景组件介绍/4. 测试场景组件介绍/2. 后置处理器/1. JSON提取器.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景组件介绍/4. 测试场景组件介绍/2. 后置处理器/1. JSON提取器.md
@@ -10,13 +10,13 @@ JSON提取器可以使用JSON-PATH语法从JSON格式的响应体中提取数据
 
 a）进入全自动测试平台的测试场景页面，选择已有测试场景的测试用例，单击接口，然后单击"＋"按钮，再单击后置处理器。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/2.%20%E5%90%8E%E7%BD%AE%E5%A4%84%E7%90%86%E5%99%A8/image.png)
+![image](https://user-images.githubusercontent.com/79617492/191709653-065619f5-e982-4700-9188-0c9ffb572d4d.png)
 
 ##### 图1-1 单击 + > 后置处理器
 
 b）输入变量名称，json解析表达式，单击执行。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/2.%20%E5%90%8E%E7%BD%AE%E5%A4%84%E7%90%86%E5%99%A8/1-2.png)
+![image](https://user-images.githubusercontent.com/79617492/191709671-e393bbb1-ddb4-4bbe-b822-0c9243853ba8.png)
 
 ##### 图1-2 输入变量名称和json解析表达式
 
@@ -36,12 +36,12 @@ b6）默认值：当匹配不到结果时，会取默认值的数据。
 
 c）等待执行完毕，查看执行报告的响应体中code值。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/2.%20%E5%90%8E%E7%BD%AE%E5%A4%84%E7%90%86%E5%99%A8/1-3.png)
+![image](https://user-images.githubusercontent.com/79617492/191709707-275f5c34-e69b-4821-aa62-71ba5796dee4.png)
 
 ##### 图1-3 查看执行报告的响应体中code值
 
 d）单击提取，可查看到设置的变量number成功提取到code值。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/2.%20%E5%90%8E%E7%BD%AE%E5%A4%84%E7%90%86%E5%99%A8/1-4.png)
+![image](https://user-images.githubusercontent.com/79617492/191709733-48a314ed-88d2-4006-9546-d35eeb48acf7.png)
 
 ##### 图1-4 变量number成功提取到code值
