--- a/SoFlu全自动测试平台教程/4. 测试场景组件介绍/4. 测试场景组件介绍/2. 后置处理器/2. Xpath提取器.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景组件介绍/4. 测试场景组件介绍/2. 后置处理器/2. Xpath提取器.md
@@ -32,3 +32,18 @@ c）输入变量名称与XPath提取表达式，单击执行。
 c1）注释：输入备注信息，可以为空。
 
 c2）变量名称：保存的变量名，将提取出来的值赋值给这个变量名，后面使用${变量名}引用。
+
+c3）匹配数量：默认获取符合条件的第一个，匹配规则与正则表达式的类似（0为随机、N为获取第N个、-1获取所有）。
+
+c4）是否是HTML：根据服务器响应是否为HTML，进而采用不同的解析方式。 当需要处理的页面是HTML格式时，必须选中该选项；如果是XML或XHTML格式（例如RSS返回），则取消选中。
+
+c5）XPath提取表达式：XPath使用路径表达式来选取XML文档中的节点或节点集。节点是通过沿着路径 (path) 或者步 (steps) 来选取的。
+
+c6）默认值：当匹配不到结果时，会取默认值的数据。
+```
+
+d）等待执行完毕，单击执行报告的响应体，查看title标签的text值。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/2.%20%E5%90%8E%E7%BD%AE%E5%A4%84%E7%90%86%E5%99%A8/2-4.png)
+
+##### 图2-4 查看title标签的text值
