--- a/SoFlu全自动测试平台教程/4. 测试场景组件介绍/4. 测试场景组件介绍/2. 后置处理器/2. Xpath提取器.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景组件介绍/4. 测试场景组件介绍/2. 后置处理器/2. Xpath提取器.md
@@ -10,19 +10,19 @@
 
 a）进入全自动测试平台的测试场景页面，选择已有测试场景的测试用例，单击接口，然后单击"＋"按钮，再单击后置处理器。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/2.%20%E5%90%8E%E7%BD%AE%E5%A4%84%E7%90%86%E5%99%A8/2-1.png)
+![image](https://user-images.githubusercontent.com/79617492/191710094-f911146f-bb6d-49c5-a16c-764d247a08f2.png)
 
 ##### 图2-1 单击 + > 后置处理器
 
 b）在下拉框选择“XPath提取器”。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/2.%20%E5%90%8E%E7%BD%AE%E5%A4%84%E7%90%86%E5%99%A8/2-2.png)
+![image](https://user-images.githubusercontent.com/79617492/191710131-3c756500-736f-4358-8446-2034221bb308.png)
 
 ##### 图2-2 选择“XPath提取器”
 
 c）输入变量名称与XPath提取表达式，单击执行。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/2.%20%E5%90%8E%E7%BD%AE%E5%A4%84%E7%90%86%E5%99%A8/2-3.png)
+![image](https://user-images.githubusercontent.com/79617492/191710156-47316ad3-97fc-482f-b0c2-c35dfc593450.png)
 
 ##### 图2-3 输入变量名称与XPath提取表达式
 
@@ -44,12 +44,12 @@ c6）默认值：当匹配不到结果时，会取默认值的数据。
 
 d）等待执行完毕，单击执行报告的响应体，查看title标签的text值。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/2.%20%E5%90%8E%E7%BD%AE%E5%A4%84%E7%90%86%E5%99%A8/2-4.png)
+![image](https://user-images.githubusercontent.com/79617492/191710195-ebd5b0a1-982f-4b1e-ac4e-705e408f3712.png)
 
 ##### 图2-4 查看title标签的text值
 
 e）单击提取，可查看到设置的变量title成功提取到text值。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/2.%20%E5%90%8E%E7%BD%AE%E5%A4%84%E7%90%86%E5%99%A8/2-5.png)
+![image](https://user-images.githubusercontent.com/79617492/191710225-83d32ff0-7420-4104-96fe-e56b6c507bf3.png)
 
 ##### 图2-5 单击提取
