--- a/SoFlu全自动测试平台教程/4. 测试场景组件介绍/2. 后置处理器/3. 正则提取器.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景组件介绍/2. 后置处理器/3. 正则提取器.md
@@ -1,1 +1,24 @@
-test
+### 4. 测试场景组件介绍
+
+#### 4.2 后置处理器
+
+##### 4.2.3 正则提取器
+
+正则提取器是位于后置处理器中的一个元件，它的作用是在请求发出并得到响应后，把响应信息中的部分通过正则表达式提取所需值，将结果存储到给定的变量名中。
+
+##### 4.2.3.1 操作步骤
+
+a）进入全自动测试平台的测试场景页面，选择已有测试场景的测试用例，单击接口，然后单击＋号按钮 > 后置处理器。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/2.%20%E5%90%8E%E7%BD%AE%E5%A4%84%E7%90%86%E5%99%A8/3-1.png)
+
+##### 图3-1 单击 + > 后置处理器
+
+b）选择“正则提取器”后，填写正确的基本信息，然后单击执行。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/2.%20%E5%90%8E%E7%BD%AE%E5%A4%84%E7%90%86%E5%99%A8/3-2.png)
+
+##### 图3-2 填写正确的基本信息
+
+```
+说明：
