--- a/SoFlu全自动测试平台教程/4. 测试场景组件介绍/2. 后置处理器/3. 正则提取器.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景组件介绍/2. 后置处理器/3. 正则提取器.md
@@ -53,3 +53,9 @@ b6-8）响应信息：响应正文。
 
 b7）默认值： 如果正则表达式没有匹配到值，则会取默认值赋值给变量。
 ```
+
+c）执行完成后，查看执行报告中提取的信息。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/2.%20%E5%90%8E%E7%BD%AE%E5%A4%84%E7%90%86%E5%99%A8/3-3.png)
+
+##### 图3-3 查看执行报告中提取的信息
