--- a/SoFlu全自动测试平台教程/4. 测试场景组件介绍/2. 后置处理器/4. 结果状态处理器.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景组件介绍/2. 后置处理器/4. 结果状态处理器.md
@@ -1,1 +1,19 @@
-test
+### 4. 测试场景组件介绍
+
+#### 4.2 后置处理器
+
+##### 4.2.4 结果状态处理器
+
+结果状态处理器是对其挂载的接口执行失败之后，整个测试流程怎么往下走，例如停止测试，本节介绍如何使用结果状态处理器。
+
+##### 4.2.4.1 操作步骤
+
+a）进入全自动测试平台的测试场景页面，选择已有测试场景的测试用例，单击接口，然后单击＋号按钮 > 后置处理器。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/2.%20%E5%90%8E%E7%BD%AE%E5%A4%84%E7%90%86%E5%99%A8/4-1.png)
+
+##### 图4-1 单击 + > 后置处理器
+
+##### 说明：演示测试接口一是执行失败的接口。
+
+b）选择结果状态处理器。
