--- a/SoFlu全自动测试平台教程/4. 测试场景组件介绍/2. 后置处理器/5. 边界提取器.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景组件介绍/2. 后置处理器/5. 边界提取器.md
@@ -1,1 +1,19 @@
-test
+### 4. 测试场景组件介绍
+
+#### 4.2 后置处理器
+
+##### 4.2.5 边界提取器
+
+边界提取器可以通过填写左右边界来提取需要的内容，它可以匹配任何格式的内容，如文本、json、xpath、html等，本节介绍如何使用边界提取器。
+
+##### 4.2.5.1 操作步骤
+
+a）进入全自动测试平台的测试场景页面，选择已有测试场景的测试用例，单击接口，然后单击＋号按钮 > 后置处理器。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/2.%20%E5%90%8E%E7%BD%AE%E5%A4%84%E7%90%86%E5%99%A8/5-1.png)
+
+##### 图5-1 单击 + > 后置处理器
+
+b）选择边界提取器。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/2.%20%E5%90%8E%E7%BD%AE%E5%A4%84%E7%90%86%E5%99%A8/5-2.png)
