--- a/SoFlu全自动测试平台教程/4. 测试场景组件介绍/2. 后置处理器/5. 边界提取器.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景组件介绍/2. 后置处理器/5. 边界提取器.md
@@ -47,3 +47,9 @@ c7）默认值：当匹配不到结果时，将取默认值，可以选择常量
 d）查看执行报告里的响应体和提取，边界提取器提取了响应体内容的“不”和”黑名单“中间的值。
 
 ![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/2.%20%E5%90%8E%E7%BD%AE%E5%A4%84%E7%90%86%E5%99%A8/5-4.png)
+
+##### 图5-4 查看执行报告里的响应体和提取
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/2.%20%E5%90%8E%E7%BD%AE%E5%A4%84%E7%90%86%E5%99%A8/5-5.png)
+
+##### 图5-5 边界提取器提取的值
