--- a/SoFlu全自动测试平台教程/4. 测试场景组件介绍/2. 后置处理器/5. 边界提取器.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景组件介绍/2. 后置处理器/5. 边界提取器.md
@@ -10,19 +10,19 @@
 
 a）进入全自动测试平台的测试场景页面，选择已有测试场景的测试用例，单击接口，然后单击＋号按钮 > 后置处理器。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/2.%20%E5%90%8E%E7%BD%AE%E5%A4%84%E7%90%86%E5%99%A8/5-1.png)
+![image](https://user-images.githubusercontent.com/79617492/192239116-2f7a3f56-b638-452b-b559-c75f03842abe.png)
 
 ##### 图5-1 单击 + > 后置处理器
 
 b）选择边界提取器。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/2.%20%E5%90%8E%E7%BD%AE%E5%A4%84%E7%90%86%E5%99%A8/5-2.png)
+![image](https://user-images.githubusercontent.com/79617492/192239147-96e59a90-9cbf-4608-af83-f7deabc4912b.png)
 
 ##### 图5-2 选择边界提取器
 
 c）输入边界提取器的相关信息，单击保存，然后单击执行。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/2.%20%E5%90%8E%E7%BD%AE%E5%A4%84%E7%90%86%E5%99%A8/5-3.png)
+![image](https://user-images.githubusercontent.com/79617492/192239164-b6819430-b5e0-4948-9843-90a90e0bd4a4.png)
 
 ##### 图5-3 输入边界提取器的相关信息
 
@@ -46,10 +46,10 @@ c7）默认值：当匹配不到结果时，将取默认值，可以选择常量
 
 d）查看执行报告里的响应体和提取，边界提取器提取了响应体内容的“不”和”黑名单“中间的值。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/2.%20%E5%90%8E%E7%BD%AE%E5%A4%84%E7%90%86%E5%99%A8/5-4.png)
+![image](https://user-images.githubusercontent.com/79617492/192239189-bafe30f0-8ae2-4622-b49b-f01f2d0e3c22.png)
 
 ##### 图5-4 查看执行报告里的响应体和提取
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/2.%20%E5%90%8E%E7%BD%AE%E5%A4%84%E7%90%86%E5%99%A8/5-5.png)
+![image](https://user-images.githubusercontent.com/79617492/192239206-e9b39a90-b522-40e6-861c-680475a4d7a7.png)
 
 ##### 图5-5 边界提取器提取的值
