--- a/SoFlu全自动测试平台教程/4. 测试场景组件介绍/3. 场景/1. 关联接口.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景组件介绍/3. 场景/1. 关联接口.md
@@ -1,1 +1,19 @@
-test
+### 4. 测试场景组件介绍
+
+#### 4.3 场景
+
+##### 4.3.1 关联接口
+
+在测试场景中可关联接口，为接口配置组件实现定时、配置变量、断言等丰富的功能，本节主要介绍如何在测试场景中关联接口。
+
+##### 4.3.1.1 前提条件
+
+已存在接口用例和接口。
+
+##### 4.3.1.2 操作步骤
+
+a）进入全自动测试平台，单击接口测试 > 测试场景管理。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/3.%20%E5%9C%BA%E6%99%AF/image.png)
+
+##### 图1-1 单击接口测试 > 测试场景管理
