--- a/SoFlu全自动测试平台教程/4. 测试场景组件介绍/3. 场景/1. 关联接口.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景组件介绍/3. 场景/1. 关联接口.md
@@ -31,3 +31,13 @@ c）选中根场景组，单击右上角的"+",再单击接口。
 ##### 图1-3 单击接口
 
 d）选择模块，勾选接口，单击确定即可关联接口。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/3.%20%E5%9C%BA%E6%99%AF/1-4.png)
+
+##### 图1-4 关联接口
+
+e）选择一个环境，单击执行即可执行该场景下的流程。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/3.%20%E5%9C%BA%E6%99%AF/1-5.png)
+
+##### 图1-5 执行该场景下的流程
