--- a/SoFlu全自动测试平台教程/4. 测试场景组件介绍/3. 场景/1. 关联接口.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景组件介绍/3. 场景/1. 关联接口.md
@@ -14,30 +14,30 @@
 
 a）进入全自动测试平台，单击接口测试 > 测试场景管理。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/3.%20%E5%9C%BA%E6%99%AF/image.png)
+![image](https://user-images.githubusercontent.com/79617492/192239520-9961fd8d-506c-4103-8b15-138cfc54838e.png)
 
 ##### 图1-1 单击接口测试 > 测试场景管理
 
 b）选择一个用例，单击新增场景。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/3.%20%E5%9C%BA%E6%99%AF/1-2.png)
+![image](https://user-images.githubusercontent.com/79617492/192239539-59781dce-3c20-469a-8f0d-9259f7b16d26.png)
 
 ##### 图1-2 单击新增场景
 
 c）选中根场景组，单击右上角的"+",再单击接口。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/3.%20%E5%9C%BA%E6%99%AF/1-3.png)
+![image](https://user-images.githubusercontent.com/79617492/192239564-04cf1646-75f5-4417-9eaa-d431cd42a841.png)
 
 ##### 图1-3 单击接口
 
 d）选择模块，勾选接口，单击确定即可关联接口。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/3.%20%E5%9C%BA%E6%99%AF/1-4.png)
+![image](https://user-images.githubusercontent.com/79617492/192239574-5ccb41c5-9b08-4a58-9736-aef2744e4cf9.png)
 
 ##### 图1-4 关联接口
 
 e）选择一个环境，单击执行即可执行该场景下的流程。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/3.%20%E5%9C%BA%E6%99%AF/1-5.png)
+![image](https://user-images.githubusercontent.com/79617492/192239604-ee3c8f23-bfa4-4e44-b965-e4b29b0f2951.png)
 
 ##### 图1-5 执行该场景下的流程
