--- a/SoFlu全自动测试平台教程/4. 测试场景组件介绍/3. 场景/2. 创建自定义请求.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景组件介绍/3. 场景/2. 创建自定义请求.md
@@ -1,1 +1,23 @@
-test
+### 4. 测试场景组件介绍
+
+#### 4.3 场景
+
+##### 4.3.2 创建自定义请求
+
+全自动测试平台支持用户在测试场景中创建自定义请求，用户可以选择创建HTTP、TCP请求和DUBBO请求，自定义输入相关请求信息。
+
+通过创建自定义请求，用户在测试场景中可使用的接口将不再局限于接口管理中的接口，可以直接自定义创建接口，测试接口。
+
+本节介绍如何创建自定义请求。
+
+##### 4.3.2.1 步骤引导
+
+a）创建自定义HTTP请求
+
+b）创建自定义TCP请求
+
+c）创建自定义DUBBO请求
+
+##### 4.3.2.1.1 创建自定义HTTP请求
+
+a）进入全自动测试平台的测试场景页面，选择测试用例，然后单击新增场景。
