--- a/SoFlu全自动测试平台教程/4. 测试场景组件介绍/3. 场景/2. 创建自定义请求.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景组件介绍/3. 场景/2. 创建自定义请求.md
@@ -22,18 +22,18 @@ c）创建自定义DUBBO请求
 
 a）进入全自动测试平台的测试场景页面，选择测试用例，然后单击新增场景。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/3.%20%E5%9C%BA%E6%99%AF/2-1.png)
+![image](https://user-images.githubusercontent.com/79617492/192240033-93f227ee-62d4-4e96-9f73-a42fee3c7536.png)
 
 ##### 图2-1 单击新增场景
 
 b）单击根场景组，然后单击＋号按钮 > 自定义请求。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/3.%20%E5%9C%BA%E6%99%AF/2-2.png)
+![image](https://user-images.githubusercontent.com/79617492/192240059-878367d2-a563-4a9e-8fa9-c958c1026062.png)
 
 ##### 图2-2 单击＋号按钮 > 自定义请求
 
 c）选择请求类型为“HTTP”，然后选择请求方式，输入相关请求信息。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/3.%20%E5%9C%BA%E6%99%AF/2-3.png)
+![image](https://user-images.githubusercontent.com/79617492/192240079-9a160db8-e52f-43e2-b78f-a1cb36255dcc.png)
 
 ##### 图2-3 输入相关请求信息
