--- a/SoFlu全自动测试平台教程/4. 测试场景组件介绍/3. 场景/3. 引入场景.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景组件介绍/3. 场景/3. 引入场景.md
@@ -1,1 +1,21 @@
-test
+### 4. 测试场景组件介绍
+
+#### 4.3 场景
+
+##### 4.3.3 引入场景
+
+本节主要介绍如何使用引入场景。
+
+##### 说明：通过使用引用场景，用户可以在当前测试场景中引入已绑定测试场景的测试用例，引入测试用例关联的测试场景通常为需要重复创建的公共场景。在执行当前测试场景时，会同时执行引入场景中的接口。
+
+##### 4.3.3.1 前提条件
+
+已存在已绑定测试场景的测试用例。
+
+##### 4.3.3.2 操作步骤
+
+a）进入全自动测试平台，单击接口测试 > 测试场景管理。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/3.%20%E5%9C%BA%E6%99%AF/3-1.png)
+
+##### 图3-1 单击接口测试 > 测试场景管理
