--- a/SoFlu全自动测试平台教程/4. 测试场景组件介绍/3. 场景/3. 引入场景.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景组件介绍/3. 场景/3. 引入场景.md
@@ -19,3 +19,21 @@ a）进入全自动测试平台，单击接口测试 > 测试场景管理。
 ![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/3.%20%E5%9C%BA%E6%99%AF/3-1.png)
 
 ##### 图3-1 单击接口测试 > 测试场景管理
+
+b）选择用例，单击新增场景。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/3.%20%E5%9C%BA%E6%99%AF/3-2.png)
+
+##### 图3-2 单击新增场景
+
+c）选择根场景组，单击右上角的“+”图标，单击引入场景。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/3.%20%E5%9C%BA%E6%99%AF/3-3.png)
+
+##### 图3-3 单击引入场景
+
+d）选择模块，勾选需要导入的用例，单击确定。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/3.%20%E5%9C%BA%E6%99%AF/3-4.png)
+
+##### 图3-4 勾选需要导入的用例
