--- a/SoFlu全自动测试平台教程/4. 测试场景组件介绍/3. 场景/3. 引入场景.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景组件介绍/3. 场景/3. 引入场景.md
@@ -37,3 +37,15 @@ d）选择模块，勾选需要导入的用例，单击确定。
 ![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/3.%20%E5%9C%BA%E6%99%AF/3-4.png)
 
 ##### 图3-4 勾选需要导入的用例
+
+e）选择一个环境，单击保存 > 执行。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/3.%20%E5%9C%BA%E6%99%AF/3-5.png)
+
+##### 图3-5 单击保存 > 执行
+
+f）可查看到引入场景中的接口被执行。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/3.%20%E5%9C%BA%E6%99%AF/3-6.png)
+
+##### 图3-6 引入场景中的接口被执行
