--- a/SoFlu全自动测试平台教程/4. 测试场景组件介绍/3. 场景/3. 引入场景.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景组件介绍/3. 场景/3. 引入场景.md
@@ -16,36 +16,36 @@
 
 a）进入全自动测试平台，单击接口测试 > 测试场景管理。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/3.%20%E5%9C%BA%E6%99%AF/3-1.png)
+![image](https://user-images.githubusercontent.com/79617492/192240355-08aa1c97-f1fa-4633-a99d-2c61b305e326.png)
 
 ##### 图3-1 单击接口测试 > 测试场景管理
 
 b）选择用例，单击新增场景。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/3.%20%E5%9C%BA%E6%99%AF/3-2.png)
+![image](https://user-images.githubusercontent.com/79617492/192240386-278a9381-f447-476a-98aa-f9fe02fa0bd8.png)
 
 ##### 图3-2 单击新增场景
 
 c）选择根场景组，单击右上角的“+”图标，单击引入场景。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/3.%20%E5%9C%BA%E6%99%AF/3-3.png)
+![image](https://user-images.githubusercontent.com/79617492/192240413-95d3d977-afb6-4f9c-8335-2e14849132ad.png)
 
 ##### 图3-3 单击引入场景
 
 d）选择模块，勾选需要导入的用例，单击确定。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/3.%20%E5%9C%BA%E6%99%AF/3-4.png)
+![image](https://user-images.githubusercontent.com/79617492/192240431-d570eb0f-082d-4e27-9812-709ad6229247.png)
 
 ##### 图3-4 勾选需要导入的用例
 
 e）选择一个环境，单击保存 > 执行。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/3.%20%E5%9C%BA%E6%99%AF/3-5.png)
+![image](https://user-images.githubusercontent.com/79617492/192240462-1190d200-c583-438d-86d0-6d40ba4116aa.png)
 
 ##### 图3-5 单击保存 > 执行
 
 f）可查看到引入场景中的接口被执行。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/3.%20%E5%9C%BA%E6%99%AF/3-6.png)
+![image](https://user-images.githubusercontent.com/79617492/192240493-db0d5bcb-d270-46ba-ae35-43a53b1b0e4e.png)
 
 ##### 图3-6 引入场景中的接口被执行
