--- a/SoFlu全自动测试平台教程/4. 测试场景组件介绍/3. 场景/4. 新增子场景.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景组件介绍/3. 场景/4. 新增子场景.md
@@ -1,1 +1,17 @@
-test
+### 4. 测试场景组件介绍
+
+#### 4.3 场景
+
+##### 4.3.4 新增子场景
+
+当一个场景中有多种情况时，可以在根场景下添加多个子场景来进行分类管理对应的接口。本节将详细介绍如何新增子场景。
+
+##### 4.3.3.1 操作步骤
+
+a）进入项目的接口测试功能模块，切换到测试场景管理页面，选中对应的测试用例，单击新增场景。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/3.%20%E5%9C%BA%E6%99%AF/4-1.png)
+
+##### 图4-1 单击新增场景
+
+b）选中“根场景组”，单击右侧加号 > 场景组。
