--- a/SoFlu全自动测试平台教程/4. 测试场景组件介绍/4. 定时器/1. 同步定时器.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景组件介绍/4. 定时器/1. 同步定时器.md
@@ -1,1 +1,23 @@
-test
+### 4. 测试场景组件介绍
+
+#### 4.4 定时器
+
+##### 4.4.1 同步定时器
+
+同步定时器可以阻塞线程，达到指定的线程数量后，再一起释放，模拟瞬间大的负载。本节介绍如何配置同步定时器。
+
+##### 4.4.1.1 操作步骤
+
+a）进入全自动测试平台，单击接口测试 > 测试场景管理 > 新增场景。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/4.%20%E5%AE%9A%E6%97%B6%E5%99%A8/image.png)
+
+##### 图1-1 单击新增场景
+
+b）选择根场景组，单击右侧的“+”图标，单击接口。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/4.%20%E5%AE%9A%E6%97%B6%E5%99%A8/1-2.png)
+
+##### 图1-2 单击接口
+
+c）选中模块，勾选一个接口，单击确定。
