--- a/SoFlu全自动测试平台教程/4. 测试场景组件介绍/4. 定时器/1. 同步定时器.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景组件介绍/4. 定时器/1. 同步定时器.md
@@ -37,3 +37,17 @@ e）选中定时器，下拉框中选择“同步定时器”。
 ![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/4.%20%E5%AE%9A%E6%97%B6%E5%99%A8/1-5.png)
 
 ##### 图1-5 选择“同步定时器”
+
+f）填写“集合用户数”和“集合等待时间”，选择环境，单击保存即可。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/4.%20%E5%AE%9A%E6%97%B6%E5%99%A8/1-6.png)
+
+##### 图1-6 填写相关信息
+
+```
+说明：
+
+f1）集合用户数：每次释放的线程数量，即每次释放的并发用户数。
+
+f2）集合等待时间：集合等待的时间，如果在这个时间内没有达到集合用户数设置的数量，也会释放线程。
+```
