--- a/SoFlu全自动测试平台教程/4. 测试场景组件介绍/4. 定时器/2. 固定定时器.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景组件介绍/4. 定时器/2. 固定定时器.md
@@ -1,1 +1,19 @@
-test
+### 4. 测试场景组件介绍
+
+#### 4.4 定时器
+
+##### 4.4.2 固定定时器
+
+固定定时器可以让测试场景里接口的请求在固定的延迟时间后执行，当固定定时器增加在根场景组下时，延迟时间会作用于根场景组下的所有接口的请求，当固定定时器增加在接口下时，延迟时间只会作用于该接口的请求。
+
+本节介绍如何使用固定定时器。
+
+##### 4.4.2.1 操作步骤
+
+a）进入全自动测试平台的测试场景页面，选择已有测试场景的测试用例，单击根场景组，然后单击＋号按钮 > 定时器。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/4.%20%E5%AE%9A%E6%97%B6%E5%99%A8/2-1.png)
+
+##### 图2-1 单击＋号按钮 > 定时器
+
+b）定时器里固定定时器设置延迟时间，然后单击执行。
