--- a/SoFlu全自动测试平台教程/4. 测试场景组件介绍/4. 定时器/2. 固定定时器.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景组件介绍/4. 定时器/2. 固定定时器.md
@@ -12,18 +12,18 @@
 
 a）进入全自动测试平台的测试场景页面，选择已有测试场景的测试用例，单击根场景组，然后单击＋号按钮 > 定时器。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/4.%20%E5%AE%9A%E6%97%B6%E5%99%A8/2-1.png)
+![image](https://user-images.githubusercontent.com/79617492/192245669-90e1ff1f-53d4-4e12-a641-acb3b6dd10b9.png)
 
 ##### 图2-1 单击＋号按钮 > 定时器
 
 b）定时器里固定定时器设置延迟时间，然后单击执行。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/4.%20%E5%AE%9A%E6%97%B6%E5%99%A8/2-2.png)
+![image](https://user-images.githubusercontent.com/79617492/192245689-6e320303-dc05-4c1c-8aa4-71e3fe30a701.png)
 
 ##### 图2-2 设置延迟时间
 
 c）延迟时间过后进行接口请求，然后显示执行报告。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/4.%20%E5%AE%9A%E6%97%B6%E5%99%A8/2-3.png)
+![image](https://user-images.githubusercontent.com/79617492/192245709-4c205a85-381e-4fcd-ae6d-e34492e40824.png)
 
 ##### 图2-3 显示执行报告
