--- a/SoFlu全自动测试平台教程/4. 测试场景组件介绍/5. 断言/6. 大小断言.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景组件介绍/5. 断言/6. 大小断言.md
@@ -1,1 +1,39 @@
-test
+### 4. 测试场景组件介绍
+
+#### 4.5 断言
+
+##### 4.5.6 大小断言
+
+大小断言是通过对响应字段的字节进行比较，来判断响应结果的字节大小是否与预期结果一致，一致则断言通过。
+
+##### 4.5.6.1 操作步骤
+
+a）进入全自动测试平台的测试场景页面，选择已有测试场景的测试用例，单击接口，然后单击＋号按钮 > 断言。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/5.%20%E6%96%AD%E8%A8%80/6-1.png)
+
+##### 图6-1 单击"＋" 再单击断言
+
+b）选择大小断言，配置好大小断言信息，然后单击执行。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/5.%20%E6%96%AD%E8%A8%80/6-2.png)
+
+##### 图6-2 配置大小断言信息
+
+```
+说明：
+
+b1）响应字段：响应字节的测试范围（可以选择用于判断的响应范围）。
+
+b2）字节大小：自定义设置进行比较的字节大小。
+
+b3）比较类型：断言字节范围。
+
+b4）执行接口时，就会通过比较类型，将响应字段里的内容的字节大小跟预期的字节大小值进行比较。比如：响应的消息体内容字节 < 200字节。
+```
+
+c）执行成功，查看执行报告断言结果。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/5.%20%E6%96%AD%E8%A8%80/6-3.png)
+
+##### 图6-3 查看执行报告断言结果
