--- a/SoFlu全自动测试平台教程/4. 测试场景组件介绍/6. 逻辑控制器/1. 执行控制器.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景组件介绍/6. 逻辑控制器/1. 执行控制器.md
@@ -1,1 +1,19 @@
-test
+### 4. 测试场景组件介绍
+
+#### 4.6 逻辑控制器
+
+##### 4.6.1 执行控制器
+
+执行控制器可以改变场景里多个接口的执行顺序。执行控制器包含：随机执行、顺序随机执行、吞吐量控制执行、交替执行，本节介绍如何使用执行控制器。
+
+##### 4.6.1.1 步骤引导
+
+a）执行控制器的随机执行；
+
+b）执行控制器的顺序随机执行；
+
+c）执行控制器的吞吐量控制执行；
+
+d）执行控制器的交替执行。
+
+##### 4.6.1.1.1 执行控制器的随机执行
