--- a/SoFlu全自动测试平台教程/4. 测试场景组件介绍/6. 逻辑控制器/1. 执行控制器.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景组件介绍/6. 逻辑控制器/1. 执行控制器.md
@@ -17,3 +17,22 @@ c）执行控制器的吞吐量控制执行；
 d）执行控制器的交替执行。
 
 ##### 4.6.1.1.1 执行控制器的随机执行
+
+a）进入全自动测试平台的测试场景页面，选择已有测试场景的测试用例，单击根场景组，然后单击＋号按钮 > 逻辑控制器。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/6.%20%E9%80%BB%E8%BE%91%E6%8E%A7%E5%88%B6%E5%99%A8/image.png)
+
+##### 图1-1 单击＋号按钮 > 逻辑控制器
+
+b）执行控制器选择“随机执行”，单击逻辑控制器，然后再单击＋号按钮 > 接口。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/6.%20%E9%80%BB%E8%BE%91%E6%8E%A7%E5%88%B6%E5%99%A8/1-2.png)
+
+##### 图1-2 单击＋号按钮 > 接口
+
+```
+说明：
+
+b1）随机执行：随机执行下的多个接口请求只会随机执行一个接口请求。
+
+b2）顺序随机执行：顺序随机执行下的所有接口请求都会执行，只是执行顺序是随机的。
