--- a/SoFlu全自动测试平台教程/4. 测试场景组件介绍/6. 逻辑控制器/2. 流程控制器.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景组件介绍/6. 逻辑控制器/2. 流程控制器.md
@@ -1,1 +1,31 @@
-test
+### 4. 测试场景组件介绍
+
+#### 4.6 逻辑控制器
+
+##### 4.6.2 流程控制器
+
+流程控制器可以通过判断语句来控制流程的执行，包含：如果(if)控制器、循环控制器、while循环控制器，本节介绍如何使用流程控制器。
+
+##### 4.6.2.1 步骤引导
+
+a）如果(if)控制器
+
+b）循环控制器
+
+c）while循环控制器
+
+##### 4.6.2.1.1 如果(if)控制器
+
+a）进入全自动测试平台的测试场景页面，选择一条用例，单击根场景组，然后单击＋号按钮， 再单击逻辑控制器。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/6.%20%E9%80%BB%E8%BE%91%E6%8E%A7%E5%88%B6%E5%99%A8/2-1.png)
+
+##### 图2-1 单击＋号按钮 > 逻辑控制器
+
+b）单击逻辑控制器，在下拉框选择“流程控制器”。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/6.%20%E9%80%BB%E8%BE%91%E6%8E%A7%E5%88%B6%E5%99%A8/2-2.png)
+
+##### 图2-2 选择“流程控制器”
+
+c）在left和right处输入值，在operator处选择判断条件。
